--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>gdpj-admin</title>
+    <title>Admin后台管理监控系统</title>
   </head>
   <body>
     <div id="app"></div>
